@@ -1,3 +1,7 @@
+2015-02-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* kpse-pkgs.m4 (kpse_texk_pkgs): Add musixtnt.
+
 2015-01-14  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* kpse-setup.m4: Disable LuaJITTeX for powerpc-*-darwin*.
